DTLS interop PASS: 10-frame PSK handshake + encrypted Register/2.01
NFR-INTEROP-001 DTLS variant ran clean against Leshan once the
hostname-resolution fix (35f3388) was in place:

  log/L9/nfr-001-dtls.pcap   10 frames, 1411 B
    1-3   ClientHello / HelloVerifyRequest / ClientHello+cookie
    4     Server Hello + Server Hello Done
    5-7   Client Key Exchange / Change Cipher Spec / Finished
    8     Server Change Cipher Spec + Finished
    9     Application Data — encrypted POST /rd  (ours)
   10     Application Data — encrypted 2.01 Created + Location-Path: rd/<id>  (Leshan's)

Cipher suite is TLS_PSK_WITH_AES_128_CCM_8, the only one tinydtls
advertises. Decryption (verified in the iot client log via dtlsReadCb)
yields the same wire-level CoAP exchange as the plain-CoAP NFR-001
run.

This is also the runtime regression check for BUG-001 (the
"cannot set psk_identity -- buffer too small" failure from log.txt
that prompted the L4 fix). The pcap shows the handshake completes
with no alert level 2 code 80, confirming the L4 fix to
dtls_adapter.cpp's PSK buffer-fit guard still holds in interop.

Docs updated:
- log/L9/results.md gets the full NFR-INTEROP-001 DTLS section,
  including the wire summary, the decrypted-CoAP excerpt, REQ list,
  and a note on the hostname-resolution bug surfaced en route.
- lwm2m-rdd.md REQ-SEC-001 row carries the pcap pointer.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>